--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Casey Neistat Site</title>
+    <title>Casey Neistat Site!</title>
 
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
